--- a/public/assets/css/style.scss
+++ b/public/assets/css/style.scss
@@ -182,4 +182,7 @@ a {
     background: var(--navbar) !important;
     color: var(--main);
 }
+.f-icon{
+    font-size: 30px !important;
+}
 // dashboard cards css end================================>
