--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -195,6 +195,12 @@ a {
   background-color: #fff;
 }
 
+th.sorting::after,
+th.sorting_asc::after,
+th.sorting_desc::after {
+  display: none !important;
+}
+
 /* Current Page Button (Active) */
 .dataTables_wrapper .dataTables_paginate .paginate_button.current {
   background-color: #007bff;
@@ -220,4 +226,38 @@ a {
 .dataTables_wrapper .dataTables_paginate .paginate_button.previous,
 .dataTables_wrapper .dataTables_paginate .paginate_button.next {
   padding: 5px 15px;
+}
+
+.card-header {
+  padding: 0.75rem 1.25rem;
+  margin-bottom: 0;
+  background-color: rgba(0, 0, 0, 0.03);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.125);
+}
+
+.card-header {
+  background-color: transparent;
+  border-bottom: none;
+  padding: 20px;
+  position: relative;
+  box-shadow: 0px 1px 20px 0px rgba(69, 90, 100, 0.08);
+}
+
+.form-material .form-control {
+  display: inline-block;
+  height: 50px;
+  width: 100%;
+  border: none;
+  border-radius: 0;
+  font-size: 20px;
+  font-weight: 400;
+  padding: 14px;
+  background-color: transparent;
+  box-shadow: none;
+  border-bottom: 1px solid var(--bg-color);
+}
+
+.btn:focus {
+  outline: none !important;
+  box-shadow: none !important;
 }/*# sourceMappingURL=style.css.map */
