--- a/public/assets/css/style.scss
+++ b/public/assets/css/style.scss
@@ -260,6 +260,7 @@ a {
     -webkit-box-shadow: none;
     box-shadow: none;
     border-bottom: 1px solid var(--bg-color);
+    border-radius: .4rem;
 }
 .btn:focus {
     outline: none !important;
