--- a/public/assets/css/style.scss
+++ b/public/assets/css/style.scss
@@ -213,7 +213,7 @@ a {
  /* Pagination Button Hover Effect */
  .dataTables_wrapper .dataTables_paginate .paginate_button:hover {
      background-color: #0056b3;
-     color: white;
+     color: white !important;
      border-color: #0056b3;
  }
 
