--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -211,7 +211,7 @@ th.sorting_desc::after {
 /* Pagination Button Hover Effect */
 .dataTables_wrapper .dataTables_paginate .paginate_button:hover {
   background-color: #0056b3;
-  color: white;
+  color: white !important;
   border-color: #0056b3;
 }
 
